# MLE-Dojo

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.py  run_api.sh  run_local.sh
example/: example.ipynb
mledojo/: __init__.py
mledojo/agent/aide/: agent.py  buildup.py  journal.py
mledojo/agent/aide/utils/: config.py  config.yaml  data_preview.py  metric.py  response.py  serialize.py  tree_export.py  util.py
mledojo/agent/dummy/: agent.py  buildup.py  config.yaml  prompt.py
mledojo/agent/mleagent/: agent.py  buildup.py  config.yaml  prompt.py
mledojo/agent/openaiagent/: agent.py  buildup.py  config.yaml  prompt.py
mledojo/chat/: __init__.py  chat.py  utils.py
mledojo/competitions/: __init__.py  competition.json  registry.py  utils.py
mledojo/competitions/20-newsgroups-ciphertext-challenge/info/: description.txt  public_leaderboard.csv
mledojo/competitions/20-newsgroups-ciphertext-challenge/utils/: metric.py  prepare.py
mledojo/competitions/AI4Code/info/: description.txt  public_leaderboard.csv
mledojo/competitions/AI4Code/utils/: metric.py  prepare.py
mledojo/competitions/DontGetKicked/info/: description.txt  private_leaderboard.csv  public_leaderboard.csv
mledojo/competitions/DontGetKicked/utils/: metric.py  prepare.py
mledojo/competitions/GiveMeSomeCredit/info/: description.txt  private_leaderboard.csv  public_leaderboard.csv
mledojo/competitions/GiveMeSomeCredit/utils/: metric.py  prepare.py
mledojo/competitions/acquire-valued-shoppers-challenge/info/: description.txt  private_leaderboard.csv  public_leaderboard.csv
mledojo/competitions/acquire-valued-shoppers-challenge/utils/: metric.py  prepare.py
mledojo/competitions/aerial-cactus-identification/info/: description.txt  private_leaderboard.csv
mledojo/competitions/aerial-cactus-identification/utils/: metric.py  prepare.py
mledojo/competitions/afsis-soil-properties/info/: description.txt  private_leaderboard.csv  public_leaderboard.csv
mledojo/competitions/afsis-soil-properties/utils/: metric.py  prepare.py
mledojo/competitions/airbnb-recruiting-new-user-bookings/info/: description.txt  (+2 more)
mledojo/gym/: competition.py  env.py  error.py  feedback.py  interface.py  metric.py  sandbox.py  utils.py
mledojo/metrics/: base.py
prepare/: competitions.txt  dsbench.json  dsbench.py  licenses.json  mle.json  mle.py
scripts/: docker_build.sh  docker_enter.sh  docker_run.sh
tests/: sandbox.py
trajectories/: agent_trajectory.json  env_history.json
(+802 files in other folders)
